working on output processing

--- a/src/vaccine_clinic/input/base.cfg
+++ b/src/vaccine_clinic/input/base.cfg
@@ -15,7 +15,7 @@
 --obs_time 15.0
 --post_obs_time_mean 1.0
 --stoptime 600
---num_reps 1
+--num_reps 10
 --seed 4470
 --output_path output
---quiet True
+--quiet
